# Windrecorder-jp

./: .gitignore  README.md  install_update.bat  pyproject.toml  start_app.bat  test_ocr.py
docs/: UV_MIGRATION_GUIDE.md
extension/: place_or_dev_extension_here
extension/LLM_search_and_summary/: LLM_search_and_summary.bat
extension/create_custom_lightbox_thumbnail_image/: create_custom_lightbox.bat
extension/index_img_embedding_for_all_videofiles/: index_img_embedding_for_all_videofiles.bat
extension/install_Tesseract_ocr/: config_tesseract_ocr.bat
extension/install_img_embedding_module/: install_img_embedding_module_安装图像嵌入模型.bat  rollback_old_img_embedding_database_回滚删除旧的图像嵌入数据库.bat  uninstall_img_embedding_module_卸载图像嵌入模型.bat
extension/install_paddle_ocr/: install_paddle_ocr_module.bat  uninstall_paddle_ocr_module.bat
extension/install_wechat_ocr/: install_wechat_ocr_module.bat  uninstall_wechat_ocr_module.bat
extension/manually_convert_screenshot_cache_into_video/: manually_convert_screenshot_cache_into_video.bat
extension/set_custom_webui_background/: set_custom_webui_background.bat
windrecorder/: db_manager.py  ocr_manager.py  record.py
