[project]
name = "windrecorder"
version = "0.0.31"
description = "Windrecorder is a memory search app by records everything on your screen in small size, to let you rewind what you have seen, query through OCR text or image description, and get activity statistics. Developed as MacOS App Rewind.ai / Copilot Recall alternative tool on Windows platform."
authors = [
    {name = "yuka-friends"}
]
license = {text = "GPL-2.0"}
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "jieba>=0.42.1",
    "matplotlib>=3.7.1",
    "numpy>=1.24.2,<2.0.0",
    "onnxruntime~=1.15.1",
    "opencv-python~=4.5.5.64",
    "pandas>=2.0.3",
    "pyclipper~=1.3.0.post4",
    "pywin32>=306,<307",
    "Send2Trash>=1.8.2",
    "Shapely~=2.0.1",
    "streamlit>=1.29.0",
    "pillow>=10.1.0",
    "wordcloud>=1.9.2",
    "pystray>=0.19.5",
    "customtkinter>=5.2.1",
    "psutil>=5.9.5",
    "scikit-image>=0.22.0",
    "faiss-cpu>=1.7.4",
    "tqdm>=4.65.0",
    "streamlit-tags>=1.2.8",
    "mss>=9.0.1",
    "pygetwindow>=0.0.9",
    "uiautomation>=2.0.20",
    "openai>=1.40.8",
    "chardet>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ipykernel>=6.29.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
